2007-08-19  Chris Morley

	Add chemical kinetics formats. These used std::tr1::shared_ptr
	and if this is not provided as such, the USE_BOOST macro needs to be
	defined and the Boost library installed.
	
	* include/openbabel/reaction.h: modified
	* src/formats/chemkinformat.cpp: added
	* src/formats/rxnformat.cpp: modified
	* src/formats/xml/cmlreactlformat.cpp: deleted
	
	* src/formats/xml/cmlformat.cpp(WriteMolecule):Handle when 
	OBChiralData::Atom4Ref has <4 items.
	(ReadMolecule): in <property> be more flexible in where the
	title attribute can be.
	Failed attempt to delete C strings from libxml2 to solve memory
	leak bug. Still unresolved.

	* src/formats/thermoformat.cpp: add option to terminate on END,
	rather than end of file. 
	For Windows use 2 digit exponents in output.
 
2007-08-18  Chris Morley

	* src/formats/pngformat.cpp: add format for extracting  chemical
	structure data from PNG files.
	
2007-08-18  Chris Morley

	* src/format/copyformat: Copy whole input stream if a 
	length is not found.
	
	* src/formats/getinchi.cpp: test for negative chars to avoid
	isspace() failing.
	
	* include/openbabel/plugin.h: small documentation changes
	
	* src/GUI/optswx.cpp: remove some debugging code
	
	* src/obconversion.cpp: re-enable Compressed input for Windows. 
	Add macro to deactivate compressed output which still has 
	problems.
	Use USE_OBF rather than USING_DYNAMIC_LIBS which was ambiguous.
	Zero wInpos and wInlen in itialization list - needed for mod
	to copy format.
	ReportNumberConverted(): allow text from TargetClassDescription
	to have only a single line.
	
	* windows-vc2005/babelconfig.h: enable compression but
	deactivate compression on write. 
	Rationalize the macros 	controlling the build in Visual Studio.
	Now define SINGLE_DLL for current OpenBabelDLL build.
	For future multiDLL builds USE_OBF with macros, like OBCONV 
	appropriate for the DLL being built.

2007-08-18  Jean Brefort  <jean.brefort@normalesup.org>
